@@ -250,13 +250,13 @@
 <tr class="row-odd"><td><strong>cloud_top_height</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[]</td>
+<td>[km]</td>
 <td>cloud top height</td>
 </tr>
 <tr class="row-even"><td><strong>cloud_top_height_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[]</td>
+<td>[km]</td>
 <td>cloud top height uncertainty</td>
 </tr>
 <tr class="row-odd"><td><strong>cloud_top_pressure</strong></td>
