@@ -328,13 +328,13 @@
 <tr class="row-even"><td><strong>aerosol_optical_depth</strong></td>
 <td>float</td>
 <td>{<em>time</em>}</td>
-<td>[m]</td>
+<td>[]</td>
 <td>aerosol optical thickness</td>
 </tr>
 <tr class="row-odd"><td><strong>aerosol_optical_depth_uncertainty</strong></td>
 <td>float</td>
 <td>{<em>time</em>}</td>
-<td>[m]</td>
+<td>[]</td>
 <td>uncertainty of the aerosol optical thickness</td>
 </tr>
 <tr class="row-even"><td><strong>surface_albedo</strong></td>
