@@ -238,13 +238,13 @@
 <tr class="row-odd"><td><strong>O3_volume_mixing_ratio</strong></td>
 <td>double</td>
 <td>{<em>time</em>, <em>vertical</em>}</td>
-<td>[]</td>
+<td>[ppv]</td>
 <td>ozone volume mixing ratio</td>
 </tr>
 <tr class="row-even"><td><strong>O3_volume_mixing_ratio_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>, <em>vertical</em>}</td>
-<td>[]</td>
+<td>[ppv]</td>
 <td>error on the ozone volume mixing ratio</td>
 </tr>
 <tr class="row-odd"><td><strong>O3_volume_mixing_ratio_avk</strong></td>
